# ai-for-engineers

./: .env-example  Makefile  README.md  environment.yml  pyproject.toml
docs/: ide_configuration.md
examples/agent_interface/: interface.ipynb
examples/classification/: 01-mm-scikit-classification.ipynb
examples/completion/: completion.py
examples/labels/: classification.py  predictions.json  tasks.json
examples/labels/prompts/: task_label.py
examples/linear_regression/: 01-mm-linear-regression.ipynb  functions.py  make_dataset.py
examples/mnist/: 01-mm-mnist_binary.ipynb  02-mm-mnist_cnn.ipynb
examples/mnist/utils/: functions.py
examples/openml/: 01-mm-openml.ipynb
examples/perceptron/: 01-mm-perceptron.ipynb  perceptron.py
examples/titanic/: 01-mm-titanic.ipynb  02-mm-preprocessing.ipynb  metrics.csv
examples/unsupervised/: 01-mm-clustering.ipynb  02-mm-dimensionality-reduction.ipynb  embeddings.json
src/ai_eng/service/: embedding_service.py
src/service/: openai_service.py
